maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:83: error: not found: value x
    if (getY()>0 && !aMurNord(getX(),getY())) {valDirection(0) = getIndication(x,y-1)}
                                                                               ^ShortestPathMaze:83: error: not found: value y
    if (getY()>0 && !aMurNord(getX(),getY())) {valDirection(0) = getIndication(x,y-1)}
                                                                                 ^ShortestPathMaze:86: error: not found: value x
    if (getY()<Hauteur-1 && !aMurNord(getX(),getY()+1)) {valDirection(1) = getIndication(x,y+1)}
                                                                                         ^ShortestPathMaze:86: error: not found: value y
    if (getY()<Hauteur-1 && !aMurNord(getX(),getY()+1)) {valDirection(1) = getIndication(x,y+1)}
                                                                                           ^ShortestPathMaze:89: error: not found: value x
    if (getX()<Largeur-1 && !aMurOuest(getX()+1,getY())) {valDirection(2) = getIndication(x+1,y)}
                                                                                          ^ShortestPathMaze:89: error: not found: value y
    if (getX()<Largeur-1 && !aMurOuest(getX()+1,getY())) {valDirection(2) = getIndication(x+1,y)}
                                                                                              ^ShortestPathMaze:92: error: not found: value x
    if (getX()>0 && !aMurOuest(getX(),getY())) {valDirection(3) = getIndication(x-1,y)}
                                                                                ^ShortestPathMaze:92: error: not found: value y
    if (getX()>0 && !aMurOuest(getX(),getY())) {valDirection(3) = getIndication(x-1,y)}
                                                                                    ^